--- a/code/src/pages/tuangou/index.wxml
+++ b/code/src/pages/tuangou/index.wxml
@@ -92,7 +92,7 @@
   <!--暂无团购-->
 <view wx:if="{{noInfo}}">
   <view class='shadow'>
-    <image src='../../images/icons/noTuan.jpg' mode='FixWidth'/>
+    <image src='../../images/icons/noTuan.png' mode='FixWidth'/>
     <view class="tips" wx:if='{{!isShoper}}'>
       <text>当前没有任何团购信息呢~</text>
     </view>
