1、新增优惠券，积分，领券中心； 2、修改 部分网络图片
Signed-off-by: waaaly <825887013@qq.com>

--- a/code/src/pages/tuangou/index.wxml
+++ b/code/src/pages/tuangou/index.wxml
@@ -92,7 +92,7 @@
   <!--暂无团购-->
 <view wx:if="{{noInfo}}">
   <view class='shadow'>
-    <image src='https://mingrui-static.oss-cn-shenzhen.aliyuncs.com/zq/noTuan.png' mode='FixWidth'/>
+    <image src='https://mingrui-static.oss-cn-shenzhen.aliyuncs.com/zq/noTuanGou.png' mode='FixWidth'/>
     <view class="tips" wx:if='{{!isShoper}}'>
       <text>当前没有任何团购信息呢~</text>
     </view>
