--- a/code/src/subPack/pages/createOrder/createOrder.wxml
+++ b/code/src/subPack/pages/createOrder/createOrder.wxml
@@ -46,7 +46,7 @@
         </view>
         <view class="yt-list-cell b-b">
             <text class="cell-tit clamp">商品数量</text>
-            <text class="cell-tip">￥{{goodInfo.number}}</text>
+            <text class="cell-tip">X{{goodInfo.number}}</text>
         </view>
         <view class="yt-list-cell b-b">
             <text class="cell-tit clamp">订单金额</text>
@@ -59,6 +59,10 @@
         <view class="yt-list-cell b-b">
             <text class="cell-tit clamp">运费</text>
             <text class="cell-tip">免运费</text>
+        </view>
+        <view class="yt-list-cell b-b">
+            <text class="cell-tit clamp">可得积分</text>
+            <text class="cell-tip red">+{{integral}}</text>
         </view>
         <!-- <view class="yt-list-cell desc-cell">
             <text class="cell-tit clamp">备注</text>
@@ -75,25 +79,4 @@
             确认支付
         </text>
     </view>
-    <!-- <view data-event-opts="{{[['tap',[['toggleMask',['$event']]]]]}}" class="{{['mask',maskState===0?'none':maskState===1?'show':'']}}" bindtap="__e">
-        <view data-event-opts="{{[['tap',[['stopPrevent',['$event']]]]]}}" class="mask-content" catchtap="__e">
-            <block wx:for="{{couponList}}" wx:for-item="item" wx:for-index="index" wx:key="index">
-                <view class="coupon-item">
-                    <view class="con">
-                        <view class="left">
-                            <text class="title">{{item.title}}</text>
-                            <text class="time">有效期至2019-06-30</text>
-                        </view>
-                        <view class="right">
-                            <text class="price">{{item.price}}</text>
-                            <text>满30可用</text>
-                        </view>
-                        <view class="circle l"></view>
-                        <view class="circle r"></view>
-                    </view>
-                    <text class="tips">限新用户使用</text>
-                </view>
-            </block>
-        </view>
-    </view> -->
 </view>
